First Working with Relationship

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DataBase": "Server=localhost;Database=saudeplus_db;User=saudeplus;Password=test123"
+  },
+  "AllowedHosts": "*"
 }
