--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataBase": "Server=localhost;Database=saudeplus_db;User=saudeplus;Password=test123"
+  },
   "AllowedHosts": "*"
 }
