--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DataBase": "Server=localhost;Database=saudeplus_db;User=saudeplus;Password=test123"
   },
+  "Jwt": {
+    "Key": "YourSecretKeyForAuthenticationOfApplication"
+  },
   "AllowedHosts": "*"
 }
