--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "DataBase": "Server=localhost;Database=saudeplus_db;User=saudeplus;Password=test123"
   },
+  "Jwt": {
+    "Key": "oSrcJ0KTV4iXsXNRUHoo",
+    "Issuer": "https://ferreirasystems.com"
+  },
   "AllowedHosts": "*"
 }
