JWT Token now expires in 1 year

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -9,7 +9,8 @@
     "DataBase": "Server=localhost;Database=saudeplus_db;User=saudeplus;Password=test123"
   },
   "Jwt": {
-    "Key": "YourSecretKeyForAuthenticationOfApplication"
+    "Key": "oSrcJ0KTV4iXsXNRUHoo",
+    "Issuer": "https://ferreirasystems.com"
   },
   "AllowedHosts": "*"
 }
