Fixed JWT Token not working properly

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -10,6 +10,7 @@
   },
   "Jwt": {
     "Key": "oSrcJ0KTV4iXsXNRUHoo",
+    "Audience": "https://ferreirasystems.com",
     "Issuer": "https://ferreirasystems.com"
   },
   "AllowedHosts": "*"
