--- a/appsettings.json
+++ b/appsettings.json
@@ -10,6 +10,7 @@
   },
   "Jwt": {
     "Key": "oSrcJ0KTV4iXsXNRUHoo",
+    "Audience": "https://ferreirasystems.com",
     "Issuer": "https://ferreirasystems.com"
   },
   "AllowedHosts": "*"
